HTML skeleton + basic CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Did You Know?</title>
 </head>
 <body>
-    <div></div>
+    <img src="./img/inkpx-word-art.png" alt="logo" id="logo">
+
+    <section class="factFrame">
+        <h1>DAILY FACT</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies posuere mauris, sit amet rutrum dui mollis quis. Fusce consectetur tristique magna, dignissim mollis erat tincidunt vitae. </p>
+        <img src="./img/star (1).png" alt="empty star" id="empty-star">
+        <img src="./img/star.png" alt="full-star" id="full-star">
+        <a href=" " id="source">SOURCE</a>
+    </section>
+
+    <section class="buttons">
+        <button id="dailyFactButton">DAILY FACT</button>
+        <button id="newFactButton">NEW FACT</button>
+        <button id="favoritesButton">
+            <img src="./img/star.png" alt="star" id="button-full-star">
+        </button>
+    </section>
+
 </body>
 </html>
