--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1 id="title">DAILY FACT</h1>
         <p id="factLocation"> </p>
         <div class="elements">
-            <img src="./img/star (1).png" alt="empty star" id="empty-star">
             <img src="./img/star.png" alt="full-star" id="full-star">
             <a href=" " target="_blank" id="source">SOURCE</a>
         </div>
@@ -30,7 +29,7 @@
         <button id="newFactButton" class="btn">NEW FACT</button>
         <button id="favoritesButton" class="btn">
             <img src="./img/star.png" alt="star" id="button-full-star">
-            <a rel="link to favorites" src="./favorites.html"></a>
+            <a rel="link to favorites" src=""></a>
         </button>
     </section>
 
