--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Did You Know?</title>
 </head>
 <body>
-    <img src="./img/inkpx-word-art.png" alt="logo" id="logo">
+    <div class="logoBox">
+        <img src="./img/inkpx-word-art.png" alt="logo" id="logo">
+    </div>
 
     <section class="factFrame">
         <h1 id="title">DAILY FACT</h1>
